--- a/xpi/content/css/mac/overlayextra.css
+++ b/xpi/content/css/mac/overlayextra.css
@@ -153,6 +153,14 @@
 		width: 18px !important;
 	  }
 	  
+	  #main-window[defaultfxtheme="true"][fx55plus="true"] #nav-bar :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button,#ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button,#ctraddon_ctr-button,#ctraddon_go-button,#ctraddon_preferences-button,#ctraddon_restart-button) > .toolbarbutton-icon {
+		width: 32px !important;
+	  }
+	  
+	  #main-window[defaultfxtheme="true"][fx56plus="true"] #nav-bar :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button,#ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button,#ctraddon_ctr-button,#ctraddon_go-button,#ctraddon_preferences-button,#ctraddon_restart-button) > .toolbarbutton-icon {
+		width: 28px !important;
+	  }
+	  
 	  #main-window #ctraddon_ctr-button > .toolbarbutton-icon {
 	    list-style-image: url("chrome://classic_theme_restorer/content/images/palette_ctr.png");
 		width: 18px !important;
