--- a/xpi/content/css/alt_addonsmanager.css
+++ b/xpi/content/css/alt_addonsmanager.css
@@ -197,6 +197,10 @@
 	  font-size: 110% !important;
 	}
 	
+	#detail-view .box-inherit.scrollbox-innerbox {
+	  margin: 0px !important;
+	}
+	
 	/* checkbox and radio items */
 	#addons-page checkbox image,
 	#addons-page radio image {
