--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -37,11 +37,13 @@
 
 	/* PanelUI-CTR-button */
 	#ctraddon_PanelUI-CTR-button,
-	#ctraddon_PanelUI-CTR-button-separator{
+	#ctraddon_PanelUI-CTR-button-separator,
+	#ctraddon_PanelUI-CTR-restartbutton,
+	#ctraddon_PanelUI-CTR-restartbutton-separator{
 	  visibility: collapse;
 	}
-
 	
+	#ctraddon_PanelUI-CTR-restartbutton,
 	#ctraddon_PanelUI-CTR-button {
 	  margin: 0;
 	  padding: 11px 0;
@@ -55,16 +57,20 @@
 	  -moz-box-orient: horizontal;
 	}
 
+	#ctraddon_PanelUI-CTR-restartbutton > .toolbarbutton-text,
 	#ctraddon_PanelUI-CTR-button > .toolbarbutton-text {
 	  display: none;
 	}
+	#ctraddon_PanelUI-CTR-restartbutton > .toolbarbutton-icon,
 	#ctraddon_PanelUI-CTR-button > .toolbarbutton-icon {
 	  -moz-margin-end: 0;
 	}
+	#ctraddon_PanelUI-CTR-restartbutton:not([disabled]):hover,
 	#ctraddon_PanelUI-CTR-button:not([disabled]):hover{
 	  outline: 1px solid hsla(210,4%,10%,.07);
 	  background-color: hsla(210,4%,10%,.07);
 	}
+	#ctraddon_PanelUI-CTR-restartbutton:not([disabled]):hover:active,
 	#ctraddon_PanelUI-CTR-button:not([disabled]):hover:active {
 	  outline: 1px solid hsla(210,4%,10%,.12);
 	  background-color: hsla(210,4%,10%,.12);
@@ -206,6 +212,7 @@
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_ctr.png");
 	}
 	
+	#ctraddon_PanelUI-CTR-restartbutton,
 	#menu_FilePopup #ctraddon_restart-menu,
 	#appmenu-popup #ctraddon_restart-appmenu{
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_restart.png");
