--- a/xpi/content/css/hidesidebarclose.css
+++ b/xpi/content/css/hidesidebarclose.css
@@ -2,6 +2,7 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 
+	#sidebar-close,
 	sidebarheader .close-icon {
 	  display: none !important;
 	} 
