--- a/xpi/content/css/close_icon_g_red.css
+++ b/xpi/content/css/close_icon_g_red.css
@@ -1,15 +1,22 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
+#sidebar-close .toolbarbutton-icon,
 *:not(#TabsToolbar):not(.tab-content) > .close-icon{
   list-style-image: url("chrome://classic_theme_restorer/content/images/close_alt.png") !important;
   -moz-image-region: rect(0, 16px, 16px, 0) !important;
 }
+#sidebar-close:hover .toolbarbutton-icon,
 *:not(#TabsToolbar):not(.tab-content) > .close-icon:hover{
   -moz-image-region: rect(0, 32px, 16px, 16px) !important;
 }
+#sidebar-close:hover:active .toolbarbutton-icon,
 *:not(#TabsToolbar):not(.tab-content) > .close-icon:hover:active {
   -moz-image-region: rect(0, 48px, 16px, 32px) !important;
 }
+#sidebar-close .toolbarbutton-icon,
 *:not(#TabsToolbar):not(.tab-content) > .close-icon > .toolbarbutton-icon {
   width: 16px !important;
+}
+#sidebar-close {
+  background: unset !important;
 }
