--- a/xpi/content/css/winxp/smallnavbutextra.css
+++ b/xpi/content/css/winxp/smallnavbutextra.css
@@ -128,15 +128,15 @@
 	  margin: 1px 0 0 0 !important;
 	}
 
-	/*#navigator-toolbox:not([customizing]) #nav-bar-customization-target {
+	#navigator-toolbox:not([customizing]) #nav-bar-customization-target {
       -moz-padding-end: 3px !important;
       -moz-margin-end: -3px !important;
       -moz-padding-start: 3px !important;
       -moz-margin-start: -3px !important;
-	}*/
+	}
 	
 	#nav-bar .toolbarbutton-1 {
-      min-width:22px !important;
+      min-width: 22px !important;
     }
 	#nav-bar #urlbar-icons .toolbarbutton-1 {
 	  min-width: unset !important;
