--- a/xpi/content/css/alt_optionspage.css
+++ b/xpi/content/css/alt_optionspage.css
@@ -28,6 +28,14 @@
 	  background-color: white !important;
 	}
 	
+	.search-container {
+	  background: none !important;
+	}
+
+	.header-name {
+	  visibility: collapse !important;
+	}
+	
 	/* main colors category items */
 	#categories .category[selected]{
 	  background-color: white !important;
