--- a/xpi/content/css/tabs_curvedall.css
+++ b/xpi/content/css/tabs_curvedall.css
@@ -235,6 +235,12 @@
 	  -moz-margin-start:-12px !important;
 	  -moz-margin-end:-14px !important;
 	}
+	
+	/*Test tweaks*/
+	#main-window[fx57plus="true"] #TabsToolbar .close-icon > .toolbarbutton-icon {
+	  width: 16px !important;
+	  height: 16px !important;
+	}
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
