--- a/xpi/content/css/alt_optionspage2.css
+++ b/xpi/content/css/alt_optionspage2.css
@@ -26,6 +26,19 @@
 	  padding: 0 6px 6px 6px !important;
 	}
 	
+	.search-container {
+	  background: none !important;
+	}
+	
+	page[fx56plus="true"] .search-container {
+	  margin-top: 34px !important;
+	  margin-bottom: -34px !important;
+	}
+
+	.header-name {
+	  visibility: collapse !important;
+	}
+	
 	#categories + vbox > #mainPrefPane + hbox {
 	  margin-bottom: -20px !important;
 	}
