--- a/xpi/content/css/alt_optionswindow.css
+++ b/xpi/content/css/alt_optionswindow.css
@@ -14,6 +14,19 @@
       margin-bottom: 30px !important;
 	}
 	
+	.search-container {
+	  background: none !important;
+	}
+	
+	page[fx56plus="true"] .search-container {
+	  margin-top: 34px !important;
+	  margin-bottom: -34px !important;
+	}
+
+	.header-name {
+	  visibility: collapse !important;
+	}
+	
 	.help-button,
 	.category[hidden="true"],
 	#mainPrefPane .header {
