--- a/xpi/content/css/tabs_squared.css
+++ b/xpi/content/css/tabs_squared.css
@@ -324,7 +324,7 @@
 	.tabbrowser-tab:not([pinned]) .tab-close-button{
 	  -moz-margin-end:-4px !important;
 	}
-	
+
 	#TabsToolbar toolbarbutton:not(.tabs-newtab-button){
 	  position:absolute !important;
 	}
@@ -400,6 +400,18 @@
 	  -moz-margin-start:2px !important;
 	  -moz-margin-end:1px !important;
 	}
+	
+	/*Test tweaks*/
+	#main-window[fx57plus="true"] #tabbrowser-tabs .tab-background,
+	#main-window[fx57plus="true"] #tabbrowser-tabs .tab-background[selected=true] {
+	  opacity: 0 !important;
+	}
+	
+	#main-window[fx57plus="true"] #TabsToolbar .close-icon > .toolbarbutton-icon {
+	  width: 16px !important;
+	  height: 16px !important;
+	}
+
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
