--- a/xpi/content/css/invicons_navbar.css
+++ b/xpi/content/css/invicons_navbar.css
@@ -2,6 +2,7 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul) {
+  @media (max-resolution: 1.0dppx) {
 	#main-window[fx55plus="true"] #nav-bar #nav-bar-customization-target > .toolbarbutton-1 > .toolbarbutton-icon,
 	#main-window[fx55plus="true"] #nav-bar .toolbarbutton-1 > :-moz-any(.toolbarbutton-menubutton-button, .toolbarbutton-badge-stack) > .toolbarbutton-icon,
 	#main-window[fx55plus="true"] #nav-bar #nav-bar-customization-target > #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
@@ -10,4 +11,5 @@
 	#main-window[fx55plus="true"] #nav-bar #nav-bar-customization-target > toolbarbutton.webextension-browser-action > :-moz-any(.toolbarbutton-menubutton-button, .toolbarbutton-badge-stack) > .toolbarbutton-icon {
 	  max-width: 16px !important;
 	}
+  }
 }
