--- a/xpi/content/css/alt_autocomplete.css
+++ b/xpi/content/css/alt_autocomplete.css
@@ -154,5 +154,11 @@
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] deck[search-suggestions-notification] {
 	  display: none !important;
 	}
+	
+	/* Fx 56 tweaks */
+	#main-window[fx56plus="true"] panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) scrollbox,
+	#main-window[fx56plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] scrollbox{
+	  overflow-y: auto !important;
+	}
 
 }
