--- a/xpi/content/css/appbutton2.css
+++ b/xpi/content/css/appbutton2.css
@@ -24,7 +24,7 @@
 	  color: white !important;
 	  text-shadow: 0 0 1px rgba(0,0,0,.7),
 				   0 1px 1.5px rgba(0,0,0,.5) !important;
-	  font-weight: bold !important;
+	  font-weight: bold;
 	  padding: 0 1.4em .05em !important;
 	  border-top: none !important;
 	  border-right: 2px solid !important;
