--- a/xpi/content/css/cuibuttons.css
+++ b/xpi/content/css/cuibuttons.css
@@ -128,8 +128,8 @@
 	  flex: 1 1 auto;
 	}
 	
-	#main-window[fx56plus="true"] #ctraddon_cui-ctroldsearch {
+	/*#main-window[fx56plus="true"] #ctraddon_cui-ctroldsearch {
 	  display: none;
-	}
+	}*/
 	
 }
