--- a/xpi/content/css/linux/invicons_navbarextra.css
+++ b/xpi/content/css/linux/invicons_navbarextra.css
@@ -14,7 +14,12 @@
 	#nav-bar #sync-button[status="active"]:hover:active:not([disabled="true"]) {
 	  list-style-image: url("chrome://browser/skin/syncProgress-toolbar-inverted.png") !important;
 	}
-	#nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon {
+	#nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	#nav-bar #downloads-button:not(:-moz-any([progress],[counter],[paused],[attention])) #downloads-indicator-progress-outer,
+	#nav-bar #downloads-button:not([counter]) > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter,
+	#nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	#nav-bar #downloads-button:-moz-any([progress], [counter], [paused]):not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	#nav-bar #downloads-button:-moz-any([progress], [counter], [paused]) #downloads-indicator-icon {
 	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png"), 0, 198, 18, 180) center no-repeat !important;
 	}
 	#nav-bar #downloads-button:not([counter]):not([attention]) > #downloads-indicator-anchor > #downloads-button-progress-area > #downloads-indicator-counter {
