--- a/xpi/content/css/linux/invicons_tabsbarextra.css
+++ b/xpi/content/css/linux/invicons_tabsbarextra.css
@@ -13,9 +13,13 @@
 	#TabsToolbar #sync-button[status="active"]:hover:active:not([disabled="true"]) {
 	  list-style-image: url("chrome://browser/skin/syncProgress-toolbar-inverted.png") !important;
 	}
-	#TabsToolbar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png"),
-								  0, 198, 18, 180) center no-repeat !important;
+	#TabsToolbar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	#TabsToolbar #downloads-button:not(:-moz-any([progress],[counter],[paused],[attention])) #downloads-indicator-progress-outer,
+	#TabsToolbar #downloads-button:not([counter]) > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter,
+	#TabsToolbar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	#TabsToolbar #downloads-button:-moz-any([progress], [counter], [paused]):not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	#TabsToolbar #downloads-button:-moz-any([progress], [counter], [paused]) #downloads-indicator-icon {
+	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png"), 0, 198, 18, 180) center no-repeat !important;
 	}
 	#TabsToolbar #downloads-button:not([counter]):not([attention]) > #downloads-indicator-anchor > #downloads-button-progress-area > #downloads-indicator-counter {
 	  background-image: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png"), 0, 198, 18, 180) !important;
