--- a/xpi/content/css/mac/invicons_navbarextra.css
+++ b/xpi/content/css/mac/invicons_navbarextra.css
@@ -14,7 +14,12 @@
 	#nav-bar #sync-button[status="active"]:hover:active:not([disabled="true"]) {
 	  list-style-image: url("chrome://browser/skin/syncProgress-toolbar-inverted.png") !important;
 	}
-	#nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon {
+	#nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	#nav-bar #downloads-button:not(:-moz-any([progress],[counter],[paused],[attention])) #downloads-indicator-progress-outer,
+	#nav-bar #downloads-button:not([counter]) > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter,
+	#nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	#nav-bar #downloads-button:-moz-any([progress], [counter], [paused]):not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	#nav-bar #downloads-button:-moz-any([progress], [counter], [paused]) #downloads-indicator-icon {
 	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png"), 0, 198, 18, 180) center no-repeat !important;
 	}
 	#nav-bar #downloads-button:not([counter]):not([attention]) > #downloads-indicator-anchor > #downloads-button-progress-area > #downloads-indicator-counter {
@@ -82,8 +87,14 @@
 	  #nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #restore-button) > .toolbarbutton-menubutton-button > .toolbarbutton-icon {
 		width: 18px !important;
 	  }
-
-	  #nav-bar #downloads-indicator-icon {
+	  #nav-bar #downloads-indicator-icon,
+	  #nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	  #nav-bar #downloads-button:not(:-moz-any([progress],[counter],[paused],[attention])) #downloads-indicator-progress-outer,
+	  #nav-bar #downloads-button:not([counter]) > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter,
+	  #nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	  #nav-bar #downloads-button:-moz-any([progress], [counter], [paused]):not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon,
+	  #nav-bar #downloads-button:-moz-any([progress], [counter], [paused]) #downloads-indicator-icon,
+	  #nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon {
 		background-image: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/Toolbar-inverted@2x.png"), 0, 396, 36, 360) !important;
 		background-size: 18px !important;
 	  }
