--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -660,6 +660,13 @@
 	#nav-bar[iconsize="large"] .toolbarbutton-1:not(:-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button)) > .toolbarbutton-badge-stack > .toolbarbutton-icon{
 	  max-width: unset !important;
 	}
+	
+	/* WebExtension action & toggle buttons */
+	#nav-bar[iconsize="large"] .toolbarbutton-1[id*="-browser-action"] .toolbarbutton-icon,
+	#nav-bar[iconsize="large"] .toolbarbutton-1[id*="-browser-toggle"] .toolbarbutton-icon {
+	  width: 18px !important;
+	  max-width: 18px !important;
+	}
 
 	/* Auto Form add-ons icon sizes*/
 	toolbarbutton[id^="af_button"] .toolbarbutton-icon {
