--- a/xpi/content/css/alt_autocomplete.css
+++ b/xpi/content/css/alt_autocomplete.css
@@ -62,6 +62,16 @@
 	#main-window[fx55plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem {
 	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings55.xml#autocomplete-richlistitem") !important;
 	}
+	
+	/* Basilisk browser support - Basilisk shows itself as Fx55, but uses Fx52 code for location bars popup */
+	#main-window[fx55plus="true"][title_normal="Basilisk"] panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) ,
+	#main-window[fx55plus="true"][title_normal="Basilisk"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] {
+	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings51.xml#urlbar-rich-result-popup") !important;
+	}
+	#main-window[fx55plus="true"][title_normal="Basilisk"] panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) .autocomplete-richlistitem,
+	#main-window[fx55plus="true"][title_normal="Basilisk"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem {
+	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings51.xml#autocomplete-richlistitem") !important;
+	}
 
 	/* restyle popup items */
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) .autocomplete-richlistitem,
