--- a/xpi/content/css/alt_autocompl_items2.css
+++ b/xpi/content/css/alt_autocompl_items2.css
@@ -4,7 +4,7 @@
 	
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="visiturl"],
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="visiturl"],
-	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="visiturl"][originaltype="action visiturl heuristic"],
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="visiturl"][originaltype="action keyword heuristic"],
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="visiturl"][originaltype="action visiturl heuristic"],
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="searchengine"][originaltype="action searchengine heuristic"],
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"][originaltype="action searchengine heuristic"],
@@ -12,6 +12,10 @@
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"][originaltype="action searchengine"],
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[type="autofill heuristic"],
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="autofill heuristic"],
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="keyword"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="keyword"],
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="keyword"][originaltype="action keyword heuristic"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="keyword"][originaltype="action keyword heuristic"],
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="visiturl"] *,
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="visiturl"] *,
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="visiturl"][originaltype="action visiturl heuristic"] *,
@@ -21,7 +25,11 @@
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="searchengine"][originaltype="action searchengine"] *,
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"][originaltype="action searchengine"] *,
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[type="autofill heuristic"] *,
-	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="autofill heuristic"] * {
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="autofill heuristic"] *,
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="keyword"] *,
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="keyword"] *,
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="keyword"][originaltype="action keyword heuristic"] *,
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="keyword"][originaltype="action keyword heuristic"] * {
 	  min-height: 0 !important;
 	  height: 0 !important;
 	  max-height: 0 !important;
@@ -38,7 +46,9 @@
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="searchengine"][originaltype="action searchengine"] + richlistitem:not([collapse="true"]),
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"][originaltype="action searchengine"] + richlistitem:not([collapse="true"]),
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[type="autofill heuristic"] + richlistitem:not([collapse="true"]),
-	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="autofill heuristic"] + richlistitem:not([collapse="true"]) {
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="autofill heuristic"] + richlistitem:not([collapse="true"]),
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="keyword"] + richlistitem:not([collapse="true"]),
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="keyword"] + richlistitem:not([collapse="true"])	{
 	  border-top: 1px solid transparent !important;
 	  border-bottom: 1px solid transparent !important;
 	}
